complete RFID support

--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -157,7 +157,7 @@
 						<span class="fas fa-car" id="priorityEvBatteryIcon">&nbsp;</span>
 					</span>
 				</button>
-				<button type="button" class="btn btn-sm btn-secondary cursor-pointer regularTextSize" id="codeBtn">
+				<button type="button" class="btn btn-sm btn-secondary cursor-pointer regularTextSize hide" id="codeButton">
 					<span>Code</span>
 					<span class="fas fa-hashtag" >&nbsp;</span>
 				</button>
@@ -1020,7 +1020,7 @@
 				$("#chargeModeModal").modal("show");
 			});
 
-			$('#codeBtn').click(function (event) {
+			$('#codeButton').click(function (event) {
 				$("#codeModal").modal("show");
 			});
 
