fix link to settings in not ready page

--- a/web/notready.html
+++ b/web/notready.html
@@ -86,7 +86,7 @@
 							<p>
 								Sollte diese Meldung dauerhaft angezeigt werden, können Sie im
 								<a href="status/status.php">Status</a> die Logdateien einsehen
-								oder in den <a href="web/settings/settings.php">Einstellungen</a>
+								oder in den <a href="settings/settings.php">Einstellungen</a>
 								ein Neustart durchführen oder Fehlerbericht senden.
 							</p>
 						</div>
