--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -146,23 +146,20 @@
 	<div id="nav-placeholder">
 	</div>
 	<div class="container-fluid">
-		<div class="d-flex justify-content-between py-1 verySmallTextSize" style="color: var(--color-fg)">
-			<div id="date" class=" col-3 m-0 p-0 text-left">
+		<div class="row py-1 verySmallTextSize" style="color: var(--color-fg)">
+			<div id="date" class="col text-left">
 				&nbsp;
 			</div>
-			
-			<button type="button" class="btn btn-sm btn-secondary cursor-pointer regularTextSize" id="chargeModeSelectBtn">
-				<span id="chargeModeSelectBtnText">Lademodus</span>
-				<span id="priorityEvBattery">
-					<span class="fas fa-car" id="priorityEvBatteryIcon">&nbsp;</span>
-				</span>
-			</button>
-			<button type="button" class="btn btn-sm btn-secondary cursor-pointer regularTextSize hide" id="codeButton">
-				<span>Code</span>
-				<span class="fas fa-hashtag">&nbsp;</span>
-			</button>
-		
-			<div id="time" class=" col-3 m-0 p-0 text-right">
+			<div class="col-5 text-center">
+				<button type="button" class="btn btn-sm btn-secondary cursor-pointer regularTextSize" id="chargeModeSelectBtn">
+					<span id="chargeModeSelectBtnText">Lademodus</span>
+					<span id="priorityEvBattery">
+						<span class="fas fa-car" id="priorityEvBatteryIcon">&nbsp;</span>
+					</span>
+				</button>
+				
+			</div>
+			<div id="time" class="col text-right">
 				&nbsp;
 			</div>
 		</div>
@@ -283,14 +280,16 @@
 
 						<div class="row vaRow m-0 p-0">
 							<div class="col-2 m-0 p-0">
-								<button type="button" class="btn btn-secondary priceLess"><i class="far fa-minus-square"></i></button>
+								<button type="button" class="btn btn-secondary priceLess"><i
+										class="far fa-minus-square"></i></button>
 							</div>
 							<div class="col-8">
 								<input type="range" class="form-control-range maxPriceInput" id="maxPrice" min="-25" max="95" step="0.1"
 									value="0" data-initialized="0">
 							</div>
 							<div class="col-2 m-0 p-0 text-right">
-								<button type="button" class="btn btn-secondary priceMore"><i class="far fa-plus-square"></i></button>
+								<button type="button" class="btn btn-secondary priceMore"><i
+										class="far fa-plus-square"></i></button>
 							</div>
 						</div>
 						<div class="form-row vaRow p-0 m-0">
@@ -797,6 +796,17 @@
 								</div>
 							</div>
 						</span>
+						<hr>
+						<div class="row hide" id="codeEntry">
+							<div class="col justify-content-center text-grey">
+								<input type="text" class="form-control" id="codeInput" placeholder="RFID-Code (1-3 Ziffern)">
+							</div>
+						</div>	
+						<div class="row  mt-2">
+							<div class="col justify-content-end" style="text-align: end;">
+								<button type = "button" class="btn btn-success" id="codeEnterButton">Eingabe</button>
+							</div>
+						</div>
 						<span id='70ModeBtn'>
 							<hr>
 
@@ -814,6 +824,7 @@
 								</div>
 							</div>
 						</span>
+					
 					</div>
 				</div> <!-- /modal body -->
 
@@ -822,33 +833,7 @@
 		</div>
 	</div>
 
-	<!-- Modal for code entry -->
-	<div class="modal fade" id="codeModal">
-		<div class="modal-dialog">
-			<div class="modal-content">
-
-				<!-- modal header -->
-				<div class="modal-header bg-info">
-					<h4 class="modal-title">Code-Eingabe</h4>
-				</div>
-
-				<!-- modal body -->
-				<div class="modal-body">
-					<div class="row justify-content-center">
-						<div class="col">
-							<input type="text" class="form-control" id="codeInput" placeholder="RFID-Code (1-3 Ziffern)">
-						</div>
-					</div>
-					<div class="row  mt-2">
-						<div class="col justify-content-end" style="text-align: end;">
-							<button type="button" class="btn btn-success" id="codeEnterButton">Eingabe</button>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
+	
 	<!-- some scripts -->
 	<script>
 
@@ -1018,10 +1003,7 @@
 				$("#chargeModeModal").modal("show");
 			});
 
-			$('#codeButton').click(function (event) {
-				$("#codeModal").modal("show");
-			});
-
+			
 			$('.chargeModeBtn').click(function (event) {
 				var chargeMode = $(this).attr("chargeMode")
 				publish(chargeMode, "openWB/set/ChargeMode");
@@ -1052,16 +1034,16 @@
 
 			function sendCode() {
 				let value = document.getElementById('codeInput').value
-				if (value.length > 0) {
+				if(value.length >0) {
 					publish(value, 'openWB/set/system/SimulateRFID')
-					$('#codeModal').modal('hide')
+					$('#chargeModeModal').modal('hide')
 				}
 			}
 			$('#codeEnterButton').click(function () {
 				sendCode()
 			})
 
-			$('#codeInput').change(function () {
+			$('#codeInput').change (function() {
 				sendCode()
 			})
 
