change bg og load screen

--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -52,7 +52,7 @@
 	<!-- local css due to async loading of theme css -->
 	<style>
 		#preloader {
-			background-color: white;
+			background-color: var(--color-bg);
 			position: fixed;
 			top: 0px;
 			left: 0px;
