transparent background for logo

--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -68,6 +68,7 @@
 
 		#preloader-image {
 			max-width: 300px;
+			filter:var(--invertLogo)
 		}
 
 		#preloader-info {
@@ -122,7 +123,7 @@
 		<div id="preloader-inner">
 			<div class="row">
 				<div class="mx-auto d-block justify-content-center">
-					<img id="preloader-image" src="img/favicons/preloader-image.png" alt="openWB">
+					<img id="preloader-image" src="img/favicons/preloader-image-transparent.png" alt="openWB">
 				</div>
 			</div>
 			<div id="preloader-info" class="row justify-content-center mt-2">
