--- a/web/settings/pvconfig.html
+++ b/web/settings/pvconfig.html
@@ -63,7 +63,7 @@
 										<input type="radio" name="chargeSubmode" data-option="2" value="2"> manueller Regelpunkt
 									</label>
 								</div>
-								<span class="form-text small">Auswahl des Regelmodus in beiden Lademodi. Die Auswahl beeinflusst den Regelpunkt und die Berechnung des Ladestroms. Es gelingt ja nicht den Übergabepunkt exakt auf 0 zu regeln, mit dieser Einstellung wurd nun konfiguriert ob eher etwas Einspeisung (Netzbezug vermeiden) oder eher etwas Netzbezug (Eigenverbrauch maximieren) erfolgen soll.</span>
+								<span class="form-text small">Auswahl des Regelmodus in beiden Lademodi. Die Auswahl beeinflusst den Regelpunkt und die Berechnung des Ladestroms. Es gelingt ja nicht den Übergabepunkt exakt auf 0 zu regeln, mit dieser Einstellung wird nun konfiguriert ob eher etwas Einspeisung (Netzbezug vermeiden) oder eher etwas Netzbezug (Eigenverbrauch maximieren) erfolgen soll.</span>
 							</div>
 						</div>
 						<div class="form-row mb-1 manualsetpoint hide">
