--- a/web/themes/EvenDarker/theme.html
+++ b/web/themes/EvenDarker/theme.html
@@ -276,6 +276,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -301,6 +302,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -326,6 +328,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -351,6 +354,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -376,6 +380,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -401,6 +406,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -425,6 +431,7 @@
 			<div class="col-2 px-0 hide socConfiguredLp text-center">
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 				<span class="socLp"></span> %
 			</div>
 		</div>
@@ -450,6 +457,7 @@
 			<div class="col-2 px-0 hide socConfiguredLp text-center">
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 				<span class="socLp"></span> %
 			</div>
 		</div>
