--- a/web/themes/Gauges/theme.html
+++ b/web/themes/Gauges/theme.html
@@ -298,6 +298,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -323,6 +324,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -348,6 +350,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -373,6 +376,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -398,6 +402,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -423,6 +428,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -447,6 +453,7 @@
 			<div class="col-2 px-0 hide socConfiguredLp text-center">
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 				<span class="socLp"></span> %
 			</div>
 		</div>
@@ -472,6 +479,7 @@
 			<div class="col-2 px-0 hide socConfiguredLp text-center">
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 				<span class="socLp"></span> %
 			</div>
 		</div>
