--- a/web/themes/dark/theme.html
+++ b/web/themes/dark/theme.html
@@ -274,6 +274,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -299,6 +300,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -324,6 +326,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -349,6 +352,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -374,6 +378,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -399,6 +404,7 @@
 				<span class="socLp"></span> %
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 			</div>
 		</div>
 
@@ -423,6 +429,7 @@
 			<div class="col-2 px-0 hide socConfiguredLp text-center">
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 				<span class="socLp"></span> %
 			</div>
 		</div>
@@ -448,6 +455,7 @@
 			<div class="col-2 px-0 hide socConfiguredLp text-center">
 				<i class="small reloadLpSoc fas fa-redo-alt"></i>
 				<i class="manualSocSymbol fas fa-edit hide"></i>
+				<a class="socHasError hide text-red" href="status/status.php"><i class="fas fa-exclamation-triangle"></i></a>
 				<span class="socLp"></span> %
 			</div>
 		</div>
