add switch for device summary

--- a/web/themes/colors/theme.html
+++ b/web/themes/colors/theme.html
@@ -190,6 +190,8 @@
 											class="fa fa-sliders-h px-0"></span> Dezimalstellen kW & kWh ändern</a>
 									<a class="dropdown-item" href="#" onclick="switchSmartHomeColors()"><span
 											class="fa fa-palette px-0"></span> Farbschema Smart-Home-Geräte ändern</a>
+									<a class="dropdown-item" href="#" onclick="toggleSmartHomeSummary()"><span
+											class="fa fa-palette px-0"></span> Smarthome-Zusammenfassung an/aus </a>
 								</div>
 							</div>
 
