add footer to main page

--- a/web/themes/EvenDarker/theme.html
+++ b/web/themes/EvenDarker/theme.html
@@ -98,7 +98,7 @@
 		}
 		var themeCookie = getCookie('openWBTheme');
 		// include special Theme style
-		$('head').append('<link rel="stylesheet" href="themes/' + themeCookie + '/style.css?v=20210307">');
+		$('head').append('<link rel="stylesheet" href="themes/' + themeCookie + '/style.css?v=20221125">');
 	</script>
 </head>
 
@@ -1191,6 +1191,11 @@
 		</div>
 
 	</div>  <!-- container -->
+	<footer class="bg-dark fixed-bottom small text-light">
+		<div class="container text-center">
+			openWB - die modulare Wallbox
+		</div>
+	</footer>
 
 	<script>
 
