--- a/web/themes/Gauges/theme.html
+++ b/web/themes/Gauges/theme.html
@@ -110,7 +110,7 @@
 		}
 		var themeCookie = getCookie('openWBTheme');
 		// include special Theme style
-		$('head').append('<link rel="stylesheet" href="themes/' + themeCookie + '/style.css?v=20210307">');
+		$('head').append('<link rel="stylesheet" href="themes/' + themeCookie + '/style.css?v=20221125">');
 	</script>
 </head>
 
@@ -1235,6 +1235,11 @@
 		</div>
 
 	</div>  <!-- container -->
+	<footer class="bg-dark fixed-bottom small text-light">
+		<div class="container text-center">
+			openWB - die modulare Wallbox
+		</div>
+	</footer>
 
 	<script>
 		var defaultScaleCounter = 8640;  // ca. 12 Stunden Gauge Auto-Rescale
