--- a/web/themes/EvenDarker/theme.html
+++ b/web/themes/EvenDarker/theme.html
@@ -109,7 +109,7 @@
 		<div id="preloader-inner">
 			<div class="row">
 				<div class="mx-auto d-block justify-content-center">
-					<img id="preloader-image" src="img/favicons/preloader-image.png" alt="openWB">
+					<img id="preloader-image" src="img/favicons/preloader-image-transparent.png" alt="openWB">
 				</div>
 			</div>
 			<div id="preloader-info" class="row justify-content-center mt-2">
@@ -1235,8 +1235,8 @@
 				countTopicsReceived = countTopicsReceived - countTopicsNotForPreloader;
 				var countTopicsToBeReceived = topicsToSubscribe.length - countTopicsNotForPreloader;
 				var percentageReceived = (countTopicsReceived / countTopicsToBeReceived * 100).toFixed(0);
-				var timeBetweenTwoMesagges = Date.now() - timeOfLastMqttMessage;
-				if ( timeBetweenTwoMesagges > 3000 ) {
+				var timeBetweenTwoMessages = Date.now() - timeOfLastMqttMessage;
+				if ( timeBetweenTwoMessages > 3000 ) {
 					// latest after 3 sec without new messages
 					percentageReceived = 100;
 					// debug output
@@ -1463,9 +1463,9 @@
 				label.addClass('text-danger');
 				if ( $.escapeSelector(elementId) == 'MaxPriceForCharging') {
 					// marks times in the price chart where the price is low enough so charging would be allowed
-	 				var priceAnnotations = createPriceAnnotations();
-	 				electricityPricechart.options.annotation.annotations = priceAnnotations;
-	 				electricityPricechart.update();
+					var priceAnnotations = createPriceAnnotations();
+					electricityPricechart.options.annotation.annotations = priceAnnotations;
+					electricityPricechart.update();
 				}
 				delayUserInput(elementId, function (id) {
 					// gets executed on callback, 2000ms after last input-change
