--- a/web/themes/dark/theme.html
+++ b/web/themes/dark/theme.html
@@ -49,7 +49,7 @@
 	<!-- local css due to async loading of theme css -->
 	<style>
 		#preloader {
-			background-color:white;
+			background-color:black;
 			position:fixed;
 			top:0px;
 			left:0px;
@@ -63,9 +63,10 @@
 		}
 		#preloader-image {
 			max-width: 300px;
+			filter:invert(1);
 		}
 		#preloader-info {
-			color:grey;
+			color: #e4e4e4;
 		}
 		#thegraph > div {
 			height: 350px;
@@ -106,7 +107,7 @@
 		<div id="preloader-inner">
 			<div class="row">
 				<div class="mx-auto d-block justify-content-center">
-					<img id="preloader-image" src="img/favicons/preloader-image.png" alt="openWB">
+					<img id="preloader-image" src="img/favicons/preloader-image-transparent.png" alt="openWB">
 				</div>
 			</div>
 			<div id="preloader-info" class="row justify-content-center mt-2">
@@ -128,7 +129,7 @@
 	<!-- Landing Page -->
 	<div id="nav-placeholder"></div>
 	<div class="container">
-		<div class="row py-1 verySmallTextSize text-black bg-darkgrey">
+		<div class="row middle py-1 regularTextSize text-black bg-darkgrey">
 			<div id="date" class="col text-left">
 				&nbsp;
 			</div>
@@ -1232,8 +1233,8 @@
 				countTopicsReceived = countTopicsReceived - countTopicsNotForPreloader;
 				var countTopicsToBeReceived = topicsToSubscribe.length - countTopicsNotForPreloader;
 				var percentageReceived = (countTopicsReceived / countTopicsToBeReceived * 100).toFixed(0);
-				var timeBetweenTwoMesagges = Date.now() - timeOfLastMqttMessage;
-				if ( timeBetweenTwoMesagges > 3000 ) {
+				var timeBetweenTwoMessages = Date.now() - timeOfLastMqttMessage;
+				if ( timeBetweenTwoMessages > 3000 ) {
 					// latest after 3 sec without new messages
 					percentageReceived = 100;
 					// debug output
@@ -1460,9 +1461,9 @@
 				label.addClass('text-danger');
 				if ( $.escapeSelector(elementId) == 'MaxPriceForCharging') {
 					// marks times in the price chart where the price is low enough so charging would be allowed
-	 				var priceAnnotations = createPriceAnnotations();
-	 				electricityPricechart.options.annotation.annotations = priceAnnotations;
-	 				electricityPricechart.update();
+					var priceAnnotations = createPriceAnnotations();
+					electricityPricechart.options.annotation.annotations = priceAnnotations;
+					electricityPricechart.update();
 				}
 				delayUserInput(elementId, function (id) {
 					// gets executed on callback, 2000ms after last input-change
